--- a/opixelserv.opam
+++ b/opixelserv.opam
@@ -8,14 +8,14 @@ build: [
 ]
 maintainer: ["Andrew Tongen <atongen@gmail>"]
 authors: ["Andrew Tongen"]
-bug-reports: "https://github.com/atongen/opixelserve/issues"
-homepage: "https://github.com/atongen/opixelserve"
-doc: "https://atongen.github.io/opixelserve"
+bug-reports: "https://github.com/atongen/opixelserv/issues"
+homepage: "https://github.com/atongen/opixelserv"
+doc: "https://atongen.github.io/opixelserv"
 license: "MIT"
 version: "0.1.0"
-dev-repo: "git+https://github.com/atongen/opixelserve.git"
-synopsis: "Opixelserve!"
-description: "Opixelserve!"
+dev-repo: "git+https://github.com/atongen/opixelserv.git"
+synopsis: "Opixelserv!"
+description: "Opixelserv!"
 depends: [
   "dune" {>= "1.10"}
   "tls"
