--- a/opixelserv.opam
+++ b/opixelserv.opam
@@ -18,7 +18,7 @@ synopsis: "Opixelserv!"
 description: "Opixelserv!"
 depends: [
   "dune" {>= "1.10"}
-  "tls"
+  "tls" {= "0.12.5"}
   "lru"
   "cmdliner"
   "cohttp-lwt-unix"
