--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
-dist: focal
-before_install:
-  - sudo apt-get -y install opam libev-dev
+matrix:
+  include:
+    - os: linux
+      dist: focal
+      before_install:
+        - sudo apt-get -y install opam libev-dev
+    - os: osx
+      osx_image: xcode12.2
+      before_install:
+        - homebrew install opam
 install: scripts/deps.sh
 script: scripts/compile.sh
